# src/utils/type.ts
@@ -1,0 +1,33 @@
+import * as yup from "yup";
+
+export type UserInfo = {
+  code: string;
+  username: string;
+  firstName: string;
+  lastName: string;
+  email: string;
+  token: string;
+};
+
+export const loginSchema = yup
+  .object({
+    email: yup.string().email().required(),
+    password: yup.string().required(),
+  })
+  .required();
+
+export const registerSchema = yup
+  .object({
+    produitCode: yup.string().required(),
+    nom: yup.string().required(),
+    description: yup.string().required(),
+    prix: yup.number().required(),
+    stock: yup.number().required(),
+    categorie: yup.string().required(),
+    state: yup
+      .string()
+      .oneOf(["ACTIVE", "INACTIVE", "DELETED", "CREATE_BUT_NOT_ACTIVE"])
+      .required(),
+    image: yup.string().required(),
+  })
+  .required();
